switch SimpleGMECFinder to use queues instead of lists
to prepare for using external memory queues so we don't have
to deal with out-of-memory issues anymore