@@ -1,17 +1,16 @@
 package edu.duke.cs.osprey.gmec;
 
-import java.util.ArrayList;
+import java.util.ArrayDeque;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
+import java.util.Deque;
+import java.util.PriorityQueue;
 
 import edu.duke.cs.osprey.astar.conf.ConfAStarTree;
 import edu.duke.cs.osprey.confspace.ConfSearch;
 import edu.duke.cs.osprey.confspace.ConfSearch.EnergiedConf;
 import edu.duke.cs.osprey.confspace.ConfSearch.ScoredConf;
-import edu.duke.cs.osprey.energy.ConfEnergyCalculator;
 import edu.duke.cs.osprey.confspace.SimpleConfSpace;
+import edu.duke.cs.osprey.energy.ConfEnergyCalculator;
 import edu.duke.cs.osprey.gmec.GMECFinder.ConfPruner;
 import edu.duke.cs.osprey.tools.Progress;
 import edu.duke.cs.osprey.tools.Stopwatch;
@@ -58,10 +57,12 @@ public class SimpleGMECFinder {
 			this.consolePrinter = new ConsoleConfPrinter();
 		}
 		
+		/* TODO: integrate PartCR
 		public Builder setConfPruner(ConfPruner val) {
 			pruner = val;
 			return this;
 		}
+		*/
 		
 		public Builder setLogPrinter(ConfPrinter val) {
 			logPrinter = val;
@@ -111,16 +112,16 @@ public class SimpleGMECFinder {
 	
 	public EnergiedConf find() {
 		
-		List<EnergiedConf> confs = find(0);
+		Deque<EnergiedConf> confs = find(0);
 		
 		if (!confs.isEmpty()) {
-			return confs.get(0);
+			return confs.peek();
 		}
 		
 		return null;
 	}
 	
-	public List<EnergiedConf> find(double energyWindowSize) {
+	public Deque<EnergiedConf> find(double energyWindowSize) {
 		
 		// start searching for the min score conf
 		System.out.println("Searching for min score conformation...");
@@ -134,7 +135,7 @@ public class SimpleGMECFinder {
 		if (minScoreConf == null) {
 			
 			// no confs in the search space, can't recover, just bail
-			return new ArrayList<>();
+			return new ArrayDeque<>();
 		}
 		System.out.println("Found min score conformation in " + minScoreStopwatch.getTime(1));
 		
@@ -154,14 +155,14 @@ public class SimpleGMECFinder {
 			// nope, there's no more confs, so we already have the GMEC
 			System.out.println("Found GMEC! (it's actually the only conformation allowed by the conf space!)");
 			consolePrinter.print(eMinScoreConf, space);
-			return Arrays.asList(eMinScoreConf);
+			return new ArrayDeque<>(Arrays.asList(eMinScoreConf));
 			
 		} else if (peekedConf.getScore() > eMinScoreConf.getEnergy() && energyWindowSize <= 0) {
 			
 			// nope, no confs have lower energy and we're not doing an energy window
 			System.out.println("Found GMEC! (it's actually the min score conformation too!)");
 			consolePrinter.print(eMinScoreConf, space);
-			return Arrays.asList(eMinScoreConf);
+			return new ArrayDeque<>(Arrays.asList(eMinScoreConf));
 		
 		} else {
 			
@@ -174,29 +175,40 @@ public class SimpleGMECFinder {
 			final EnergyRange erange = new EnergyRange(eMinScoreConf.getEnergy(), energyWindowSize);
 		
 			// start the list of energied confs
-			List<EnergiedConf> econfs = new ArrayList<>();
+			PriorityQueue<EnergiedConf> econfs = new PriorityQueue<EnergiedConf>(
+				(EnergiedConf a, EnergiedConf b) -> Double.compare(a.getEnergy(), b.getEnergy())
+			);
 			econfs.add(eMinScoreConf);
 		
 			checkMoreConfs(unpeekedConfs, erange, econfs);
 			
 			// econfs is sorted now, so the first one is the GMEC
-			EnergiedConf gmec = econfs.get(0);
+			EnergiedConf gmec = econfs.peek();
 			System.out.println("\nFound GMEC!");
 			consolePrinter.print(gmec, space);
 			
-			System.out.println(String.format("Found %d total conformations in energy window", econfs.size()));
+			// return just the confs in the energy window
+			Deque<EnergiedConf> econfsInRange = new ArrayDeque<>();
+			while (!econfs.isEmpty()) {
+				EnergiedConf econf = econfs.poll();
+				if (erange.contains(econf.getEnergy())) {
+					econfsInRange.add(econf);
+				}
+			}
 			
-			return econfs;
+			System.out.println(String.format("Found %d total conformations in energy window", econfsInRange.size()));
+			
+			return econfsInRange;
 		}
 	}
 	
-	private void checkMoreConfs(ConfSearch search, EnergyRange erange, List<EnergiedConf> econfs) {
+	private void checkMoreConfs(ConfSearch search, EnergyRange erange, PriorityQueue<EnergiedConf> econfs) {
 		
 		setErangeProgress(search, erange);
 		
 		// enumerate all confs in order of the scores, up to the estimate of the top of the energy window
 		System.out.println("Enumerating other low-scoring conformations...");
-        List<ScoredConf> otherLowEnergyConfs = new ArrayList<>();
+        Deque<ScoredConf> otherLowEnergyConfs = new ArrayDeque<>();
         Stopwatch timingStopwatch = new Stopwatch().start();
         Stopwatch speculativeMinimizationStopwatch = new Stopwatch().start();
         while (true) {
@@ -215,8 +227,7 @@ public class SimpleGMECFinder {
                 speculativeMinimizationStopwatch.stop();
                 
                 // save the conf and the energy for later
-                // TODO: this remove() is linear time and could be slow. replace with Deque if this becomes a performance problem
-                EnergiedConf econf = ecalc.calcEnergy(otherLowEnergyConfs.remove(0));
+                EnergiedConf econf = ecalc.calcEnergy(otherLowEnergyConfs.removeFirst());
                 handleEnergiedConf(econf, econfs, erange);
                 
 				boolean changed = erange.updateMin(econf.getEnergy());
@@ -231,34 +242,26 @@ public class SimpleGMECFinder {
 		
 		// ConfSearch implementations can give one extra conf that's technically above the bound we gave to nextConfs()
 		// that's because all ConfSearch implementations aren't smart enough (yet) to peek ahead
-		// so prune the conf now because we definitely don't care about it, or any other higher confs
-		pruneConfsOutsideRange(otherLowEnergyConfs, erange);
+		// so prune the conf now because we definitely don't care about it
+        if (!erange.contains(otherLowEnergyConfs.getLast().getScore())) {
+        	otherLowEnergyConfs.removeLast();
+        }
 		
 		System.out.println(String.format("\tFound %d more in %s", otherLowEnergyConfs.size(), timingStopwatch.getTime(1)));
 		
 		if (!otherLowEnergyConfs.isEmpty()) {
 			
-			// prune the confs list if needed (eg, PartCR)
+			/* TODO: integrate PartCR
 			if (pruner != null) {
 				pruner.prune(otherLowEnergyConfs, ecalc);
 			}
-
+			*/
+			
 			minimizeLowEnergyConfs(otherLowEnergyConfs, erange, econfs);
 		}
-
-		// sort all the confs by energy
-		Collections.sort(econfs, new Comparator<EnergiedConf>() {
-			@Override
-			public int compare(EnergiedConf a, EnergiedConf b) {
-				return Double.compare(a.getEnergy(), b.getEnergy());
-			}
-		});
-		
-		// prune all confs outside the energy window
-		pruneConfsOutsideRange(econfs, erange);
 	}
 
-	private void minimizeLowEnergyConfs(List<ScoredConf> lowEnergyConfs, EnergyRange erange, List<EnergiedConf> econfs) {
+	private void minimizeLowEnergyConfs(Deque<ScoredConf> lowEnergyConfs, EnergyRange erange, PriorityQueue<EnergiedConf> econfs) {
 		
 		// calculate energy for each conf
 		// this will probably take a while, so track progress
@@ -276,8 +279,13 @@ public class SimpleGMECFinder {
 
 				int numLowEnergyConfsBefore = lowEnergyConfs.size();
 				
-				// prune conformations with the new window
-				pruneConfsOutsideRange(lowEnergyConfs, erange);
+				// prune conformations (in-place) with the new window
+				for (int i=0; i<numLowEnergyConfsBefore; i++) {
+					ScoredConf conf = lowEnergyConfs.poll();
+					if (erange.containsOrBelow(conf.getScore())) {
+						lowEnergyConfs.add(conf);
+					}
+				}
 
 				// update progress
 				System.out.println(String.format("\nNew lowest energy: %.6f", erange.getMin()));
@@ -290,8 +298,8 @@ public class SimpleGMECFinder {
 
 		// calc the conf energy asynchronously
 		System.out.println(String.format("\nComputing energies for %d conformations...", lowEnergyConfs.size()));
-		for (int i=0; i<lowEnergyConfs.size(); i++) {
-			ecalc.calcEnergyAsync(lowEnergyConfs.get(i), ecalcListener);
+		while (!lowEnergyConfs.isEmpty()) {
+			ecalc.calcEnergyAsync(lowEnergyConfs.remove(), ecalcListener);
 		}
 		ecalc.getTasks().waitForFinish();
 	}
@@ -309,7 +317,7 @@ public class SimpleGMECFinder {
         }
     }
 	
-	private void handleEnergiedConf(EnergiedConf econf, List<EnergiedConf> econfs, EnergyRange erange) {
+	private void handleEnergiedConf(EnergiedConf econf, PriorityQueue<EnergiedConf> econfs, EnergyRange erange) {
 		
 		// make sure the score was actually a lower bound
 		if (econf.getScore() > econf.getEnergy() + 0.1) {
@@ -326,17 +334,9 @@ public class SimpleGMECFinder {
 		logPrinter.print(econf, space);
 
 		// log the conf to console too if desired
-		if (printIntermediateConfsToConsole) {
+		if (printIntermediateConfsToConsole /* TEMP */ || true) {
 			System.out.println();
 			consolePrinter.print(econf, space, erange);
-		}
-	}
-	
-	private void pruneConfsOutsideRange(List<? extends ScoredConf> confs, EnergyRange erange) {
-		for (int i=confs.size()-1; i>=0; i--) {
-			if (confs.get(i).getScore() > erange.getMax()) {
-				confs.remove(i);
-			}
 		}
 	}
 }
